<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AndreiTecsorsTheme"
    android:background="@drawable/result_background"
    tools:context=".ResultActivity">

    <Button
        android:id="@+id/tecsor_andrei_result_btn_change_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/result_button_model"
        android:text="@string/result_new_player"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tecsor_andrei_result_cl"
        app:layout_constraintStart_toStartOf="@+id/tecsor_andrei_result_cl"
        app:layout_constraintTop_toBottomOf="@+id/tecsor_andrei_result_cl" />

    <Button
        android:id="@+id/tecsor_andrei_result_btn_play_again"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/result_button_model"
        android:text="@string/result_play_again"
        app:layout_constraintBottom_toTopOf="@+id/tecsor_andrei_result_btn_change_nickname"
        app:layout_constraintEnd_toEndOf="@+id/tecsor_andrei_result_cl"
        app:layout_constraintStart_toStartOf="@+id/tecsor_andrei_result_cl"
        app:layout_constraintTop_toBottomOf="@+id/tecsor_andrei_result_cl"
        android:textColor="@color/white"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tecsor_andrei_result_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/result_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999">

        <TextView
            android:id="@+id/tecsor_andrei_result_bravo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/result_thanks_user"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tecsor_andrei_result_pg"
            android:gravity="center_horizontal" />

        <ProgressBar
            android:id="@+id/tecsor_andrei_result_pg"
            style="?android:attr/progressBarStyle"
            android:layout_width="147dp"
            android:layout_height="157dp"
            android:layout_marginTop="8dp"
            android:indeterminateOnly="false"
            android:progress="100"
            android:progressDrawable="@drawable/result_score_circle"
            android:rotation="-90"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tecsor_andrei_result_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_score"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/tecsor_andrei_result_pg"
            app:layout_constraintEnd_toEndOf="@+id/tecsor_andrei_result_pg"
            app:layout_constraintStart_toStartOf="@+id/tecsor_andrei_result_pg"
            app:layout_constraintTop_toTopOf="@+id/tecsor_andrei_result_pg" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tecsor_andrei_easter_egg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easter_egg"
        android:textSize="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>